# skillflow

./: .env.example  .gitignore  AGENTS.md  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: django.yml
deploy/: nginx.conf  setup.sh  skillflow.service  update.sh
pages/: admin.py  tests.py  urls.py  views.py
pages/templates/pages/: about.html  index.html
project/: settings.py  urls.py
skillflow/: adapters.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
skillflow/migrations/: 0001_initial.py
skillflow/templates/skillflow/: ce_confirm_delete.html  ce_form.html  cert_confirm_delete.html  cert_detail.html  cert_form.html  dashboard.html
skillflow/templatetags/: skillflow_extras.py
templates/: base.html
templates/account/: login.html  logout.html  signup.html
