[project]
name = "skillflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "gunicorn>=23.0.0",
    "idna==3.18",
    "psycopg[binary]>=3.2.0",
    "pyjwt>=2.13.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
